# ai-experiments-hub

./: .env.example  .gitignore  LICENSE  README.md
python-projects/06-code-doc-generator/: .env.example  API.md  CHANGELOG.md  MANIFEST.in  QUICK_START.md  README.md  USAGE.md  doc_gen.py  package.json  pyproject.toml  requirements.txt  setup.py
python-projects/06-code-doc-generator/examples/: README.md  example.js  example.py
python-projects/06-code-doc-generator/src/: __init__.py
python-projects/06-code-doc-generator/src/core/: __init__.py  ai_explainer.py  cache_manager.py  doc_generator.py  llm_client.py
python-projects/06-code-doc-generator/src/formatters/: __init__.py  base_formatter.py  docstring_formatter.py  html_formatter.py  json_formatter.py  markdown_formatter.py
python-projects/06-code-doc-generator/src/parsers/: __init__.py  base_parser.py  java_parser.py  javascript_parser.py  js_parser_helper.js  models.py  parser_registry.py  python_parser.py
python-projects/06-code-doc-generator/src/utils/: __init__.py  file_utils.py
python-projects/06-code-doc-generator/src/web/: __init__.py  app.py  routes.py
python-projects/06-code-doc-generator/tests/: __init__.py  test_ai_enhancement.py  test_all_parsers.py  test_cli_commands.py  test_cli_generate.py  test_doc_generator.py  test_formatters.py  test_installation.py  test_python_parser.py  test_serve.py
python-projects/06-code-doc-generator/tests/fixtures/: Sample.java  sample.js  sample.py
python-projects/14-multi-agent-orchestrator/: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .project-status  .pylintrc  API_FIX_SUMMARY.md  CHANGELOG.md  CLOUD_DEPLOYMENT.md  COMPLETION_REPORT.md  COMPLETION_STATUS.md  CONTRIBUTING.md  DASHBOARD_TASK_CREATION.md  Dockerfile  FIXES.md  HOW_TO_USE.md  MONITORING.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.sh  QUICK_WORKFLOW_DEMO.md  README.md  SESSION_SUMMARY_14.9.md  SESSION_SUMMARY_14.9_FINAL.md  STARTUP.md  VERIFICATION_CHECKLIST.md  WORKFLOW_GUIDE.md  alembic.ini  celery_app.py  demo_database_workflow.py  docker-compose.yml  docker-entrypoint.sh  migrate.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  (+5 more)
python-projects/14-multi-agent-orchestrator/.github/workflows/: ci.yml
python-projects/14-multi-agent-orchestrator/alembic/: env.py
python-projects/14-multi-agent-orchestrator/alembic/versions/: 001_initial_migration.py  002_add_users_table.py
python-projects/14-multi-agent-orchestrator/examples/: API_USAGE.md  README.md  curl_examples.sh  run_workflow.py
python-projects/14-multi-agent-orchestrator/examples/workflows/: code_review_workflow.py  content_generation_workflow.py  data_analysis_workflow.py
python-projects/14-multi-agent-orchestrator/migrations/: README.md  env.py
python-projects/14-multi-agent-orchestrator/migrations/versions/: 001_add_workflow_models.py
python-projects/14-multi-agent-orchestrator/scripts/: init_db.py  seed_sample_data.py
python-projects/14-multi-agent-orchestrator/src/agents/: __init__.py  registry.py
python-projects/14-multi-agent-orchestrator/src/api/: admin_dashboard.py  agent_auction.py  agent_consensus.py  agent_contract.py  agent_coordination.py  agent_discovery.py  agent_incentive.py  agent_knowledge.py  agent_learning.py  agent_negotiation.py  agent_performance.py  agent_profiling.py  agent_reputation.py  agent_role.py  agent_trust.py  agent_versioning.py  agents.py  alert_management.py  analytics.py  analytics_dashboard.py  api_documentation.py  api_gateway.py  api_rate_limiting.py  audit_logging.py  auth.py  backup_recovery.py  cache.py  capabilities.py  capacity_planning.py  circuit_breaker.py  coalition_formation.py  collaboration.py  communication_protocol.py  config_management.py  conflict_resolution.py  cost_tracking.py  data_privacy.py  data_retention.py  database_migration.py  dependencies.py  (+46 more)
python-projects/14-multi-agent-orchestrator/src/core/: auth.py  cache.py  cache_middleware.py  config.py  database.py  db_utils.py  error_handler.py  error_tracker.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limit_middleware.py  rate_limiter.py  seed_data.py  validators.py  websocket.py
python-projects/14-multi-agent-orchestrator/src/models/: __init__.py  agent.py  agent_execution.py  agent_message.py  shared_memory.py  task.py  user.py  workflow.py
python-projects/14-multi-agent-orchestrator/src/services/: __init__.py  admin_dashboard.py  agent_analytics.py  agent_auction.py  agent_capability.py  agent_collaboration.py  agent_communication.py  agent_communication_protocol.py  agent_consensus.py  agent_contract.py  agent_coordination.py  agent_discovery.py  agent_event_system.py  agent_health_monitor.py  agent_incentive.py  agent_role.py  (+64 more)
python-projects/14-multi-agent-orchestrator/templates/: dashboard.html
python-projects/14-multi-agent-orchestrator/tests/: README.md  conftest.py
python-projects/15-video-understanding/: .env.template  .gitignore  README.md  pyproject.toml  server.py
python-projects/15-video-understanding/alembic/: README  env.py
python-projects/15-video-understanding/src/: __init__.py
python-projects/15-video-understanding/tests/: test_audio_processing.py  test_clip_integration.py  test_frame_extraction.py  test_scene_detection.py  test_vector_storage.py  test_visual_analysis.py
(+595 files in other folders)
